--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,4 +9,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/purple_700</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+    <style name="LaunchTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/launch_background</item>
+    </style>
 </resources>
